# robotic_pick_place_cell

./: README.md
docs/: gazebo_world.md  package_architecture.md  ur5e_description.md
src/pick_place_cell_bringup/: CMakeLists.txt  package.xml
src/pick_place_cell_bringup/launch/: ros2_control.launch.py
src/pick_place_cell_demo/: package.xml  setup.cfg  setup.py
src/pick_place_cell_demo/launch/: moveit_joint_goal_demo.launch.py  pick_place_demo.launch.py
src/pick_place_cell_demo/pick_place_cell_demo/: moveit_joint_goal_demo.py  pick_place_demo.py
src/pick_place_cell_description/: CMakeLists.txt  package.xml
src/pick_place_cell_description/launch/: view_ur5e.launch.py
src/pick_place_cell_description/rviz/: ur5e_view.rviz
src/pick_place_cell_gazebo/: CMakeLists.txt  package.xml
src/pick_place_cell_gazebo/launch/: spawn_ur5e.launch.py  world.launch.py
src/pick_place_cell_gazebo/worlds/: pick_place_cell.world.sdf
src/pick_place_cell_moveit_config/: CMakeLists.txt  package.xml
src/pick_place_cell_moveit_config/config/: joint_limits.yaml  moveit_py.yaml  ompl_planning.yaml  pick_place_cell_ur5e.srdf  pick_place_cell_ur5e.urdf.xacro  ros2_controllers.yaml
src/pick_place_cell_moveit_config/launch/: move_group.launch.py
src/pick_place_cell_perception/: package.xml  setup.cfg  setup.py
