<?xml version="1.0"?>
<package format="3">
  <name>pick_place_cell_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation package for the robotic pick and place cell.</description>
  <maintainer email="280829604+AhmetEsme@users.noreply.github.com">ahmet</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <exec_depend>pick_place_cell_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
