<?xml version="1.0"?>
<package format="3">
  <name>pick_place_cell_moveit_config</name>
  <version>0.0.0</version>
  <description>MoveIt2 configuration package for the robotic pick and place cell.</description>
  <maintainer email="280829604+AhmetEsme@users.noreply.github.com">ahmet</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <exec_depend>moveit_simple_controller_manager</exec_depend>

  <exec_depend>moveit_configs_utils</exec_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>

  <exec_depend>moveit_kinematics</exec_depend>

  <exec_depend>moveit_planners_ompl</exec_depend>

  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
